# attestplane

./: .aegis-smoke  .api-drift-baseline.json  .bestpractices.json  .codespellrc  .gitignore  .local-codex-gates.example.yml  .local-codex-runner.example.yml  .local-codex-runner.p0.example.yml  .local-codex-runner.p1.example.yml  .local-codex-runner.p2-docs.example.yml  .lycheecache  .lycheeignore  .markdownlint.jsonc  .yamllint.yml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_zh.md  CONTRIBUTORS.md  DCO.txt  GOVERNANCE.md  LICENSE  MAINTAINERS.md  MAJOR-UPGRADE.md  NOTICE  README.md  REUSE.toml  SECURITY.md  SECURITY_zh.md  TRADEMARK.md  _typos.toml  aegis.toml  autodev.ok.json  hypothesis.py  jsonschema.py  package.json  pytest.ini
.github/: CODEOWNERS  actionlint.yaml  dependabot.yml  labels.yml  pull_request_template.md
.local/: codex-runner-p0.yml  codex-runner-p1-1.yml  codex-runner-p1-2.yml  codex-runner-p2-docs.yml  codex-runner.yml
attestplane/: __init__.py
docs/: README.md  ci_testing_framework_20260518.md  errors.md  non-goals.md  quickstart.md
fixtures/: anchored.bundle  quarantined.bundle  sample.bundle  valid_bundle.att
release/: abandoned-stable-tags.json  autodev-train-targets.json
sdk/python/: README.md  conftest.py  pyproject.toml
sdk/python/src/: hypothesis.py  jsonschema.py  yaml.pyi
sdk/python/src/attestplane/: __init__.py  adapter_conformance.py  canonical.py  canonical_text.py  event_payloads.py  event_types.py  hashchain.py  intoto.py  proof_bundle.py  reason_codes.py  replay_verifier.py  retention.py  settlement_verifier.py  substrate.py  types.py  verifier.py  verify_errors.py  verify_reason_codes.py
sdk/python/src/attestplane/adapters/: __init__.py  aios_spec.py  base.py  langfuse.py  langsmith.py
sdk/python/src/attestplane/anchoring/: __init__.py  base.py  composite.py  eidas.py  http.py  mock.py  ocsp.py  rfc3161.py  sigstore.py  testing.py  verifier.py  worker.py
sdk/python/src/attestplane/cli/: __init__.py  __main__.py  main.py  proofbundle_alpha.py  verify_json.py
sdk/python/src/attestplane/conformance/: __init__.py  negative_vectors.py  run.py
sdk/python/src/attestplane/obligations/: __init__.py  dora_article_8.json  eu_ai_act_article_12.json  registry.py  registry.schema.json
sdk/python/src/attestplane/sdk/: __init__.py  bundle.py
sdk/python/src/attestplane/sdk/examples/: __init__.py  minimum_bundle.py
sdk/python/src/attestplane/signing/: __init__.py  base.py  providers.py  signer.py  trust_roots.py  verifier_ext.py
sdk/python/src/attestplane/storage/: __init__.py  base.py  jsonl.py
sdk/python/src/hypothesis/: __init__.py  strategies.py
sdk/python/src/jsonschema/: __init__.py
sdk/python/src/yaml/: __init__.pyi
sdk/python/tests/: __init__.py  conftest.py  test_adapter_conformance.py  test_architecture_audit_trigger.py  test_autodev_temporal_worker_startup_cleanup.py  test_canonical.py  test_canonical_text.py  test_conformance.py  test_conformance_negative.py  test_cov_adapter_conformance.py  test_cov_anchor_testing.py  test_cov_anchor_verifier.py  test_cov_cli_main.py  test_cov_cli_proofbundle_alpha.py  test_cov_cli_verify_json.py  test_cov_eidas.py  test_cov_event_payloads.py  test_cov_http.py  test_cov_misc.py  test_cov_ocsp.py  test_cov_proof_bundle.py  test_cov_replay.py  test_cov_retention.py  test_cov_rfc3161.py  test_cov_signer.py  test_cov_sigstore.py  test_cov_storage.py  test_cov_trust_roots.py  test_cov_verifier_ext.py  test_cov_verifier_top.py  test_event_payloads.py  test_event_types.py  test_hashchain.py  test_import_surface.py  test_intoto.py  test_issue209_schema_version_ci_coverage.py  test_local_codex_runner_queue.py  test_plan_schema.py  test_plan_to_issues.py  test_proof_bundle.py  (+21 more)
sdk/python/tests/adapters/: test_base.py  test_langfuse.py  test_langsmith.py
sdk/python/tests/anchoring/: test_anchor_vectors.py  test_anchoring.py  test_eidas.py  test_freetsa_live.py  test_http.py  test_multihop.py  test_ocsp.py  test_quarantine.py  test_rfc3161.py  test_sigstore.py  test_worker.py
sdk/python/tests/anchoring/fixtures/: freetsa_anchored_bundle.json  freetsa_quarantined_bundle.json
sdk/python/tests/cli/: test_exit_codes.py  test_main.py  test_proofbundle_alpha.py  test_verify_cli_deterministic_json.py  test_verify_errors.py  test_verify_json_contract.py  test_verify_taxonomy_version.py  verify_json_contract_v1.py
sdk/python/tests/conformance/: anchor_bundle_fixtures.py  anchor_vectors.json  free_tsa_anchored_bundle.json  free_tsa_quarantined_bundle.json  free_tsa_unavailable_bundle.json  generate_reason_code_golden.py  generate_vectors.py  lease_lifecycle_event_vectors.json  policy_check_event_vectors.json  proof_bundle_minimum_schema_negative_vectors.json  proof_bundle_policy_trace_vectors.json  reason_code_golden.json  reason_codes_vectors.json  replay_event_vectors.json  settlement_precondition_vectors.json  signature_vectors.json  taxonomy_version_pin_vectors.json  test_anchoring_bundle_fixtures.py  test_freetsa_anchoring_vectors.py  test_freetsa_quarantine.py  test_negative_vectors.py  test_reason_code_golden.py  test_reason_codes.py  test_taxonomy_version_pin.py  test_verifier_conformance.py  text_vectors.json  vectors.json  verifier_conformance_vectors.json  verify_json_contract_v1.json  verify_json_contract_vectors.json
sdk/python/tests/conformance/negative/: README.md  broken_chain.json  duplicate_event.json  malformed_payload.json  missing_event.json  reordered_event.json
sdk/python/tests/fault_injection/: __init__.py  test_fault_matrix.py
sdk/python/tests/fixtures/: verify_json_contract.golden
sdk/python/tests/fixtures/adapter_conformance/: langfuse_v1.json  langsmith_v1.json
sdk/python/tests/obligations/: test_registry.py
sdk/python/tests/signing/: test_base.py  test_proof_bundle_signatures.py  test_providers.py  test_signature_vectors.py  test_signer.py  test_trust_roots.py  test_verifier_ext.py
sdk/python/tests/storage/: test_jsonl.py  test_storage_compatibility.py
sdk/python/tests/verifier/: test_anchor_quarantine.py
(+1844 files in other folders)
