[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "attestplane"
version = "0.0.1"
description = "Verifiable audit substrate for AI agents. EU AI Act Article 12 ready."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "The Attestplane Authors" },
]
keywords = [
    "audit",
    "compliance",
    "eu-ai-act",
    "dora",
    "gdpr",
    "hash-chain",
    "provenance",
    "transparency",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "uuid-utils>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "mypy>=1.11",
    "ruff>=0.6",
    "hypothesis>=6.100",
    "cyclonedx-bom>=4.5",
    "build>=1.2",
]

[project.urls]
Homepage = "https://attestplane.io"
Repository = "https://github.com/attestplane/attestplane"
Issues = "https://github.com/attestplane/attestplane/issues"
Changelog = "https://github.com/attestplane/attestplane/releases"
Documentation = "https://github.com/attestplane/attestplane/tree/main/sdk/python"

[tool.hatch.build.targets.wheel]
packages = ["src/attestplane"]

[tool.hatch.build.targets.sdist]
include = [
    "src/attestplane",
    "tests",
    "README.md",
    "LICENSE",
    "NOTICE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "B", "UP", "S", "RUF", "PL", "PT", "SIM", "TID",
]
ignore = [
    "PLR0913",
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_any_explicit = false
files = ["src/attestplane"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
xfail_strict = true

[tool.coverage.run]
source = ["src/attestplane"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false
